--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <nav>
         <div class="container">
-            <h2 class="logo">HA SOCIAL</h2>
+            <h2 class="logo"><a href="#">HA SOCIAL</a></h2>
             <div class="search-bar">
                 <i class="uil uil-search"></i>
                 <input type="search" placeholder="Search for creators, inspiratopns">
