--- a/index.html
+++ b/index.html
@@ -135,6 +135,10 @@
                         <span><i class="uil uil-setting"></i></span>
                         <h3>Settings</h3>
                     </a>
+                     <a class="menu-item">
+                        <span><i class="uil  uil-comment-info-alt"></i></span>
+                        <h3>Send feedback</h3>
+                    </a>
                 </div>
                 <!--------------------- Sidebar End ------------------>
                 <label for="creat-post" class="btn btn-primary">Create Post</label>
